aspectj dependency changed, module info changed