@@ -15,14 +15,27 @@
 		<plugins>
 			<!-- COMPILING -->
 			<plugin>
-				<groupId>com.github.m50d</groupId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<compilerArg>--patch-module</compilerArg>
+						<compilerArg>maven.artifact=/Users/matthias/.m2/repository/org/apache/maven/maven-core/3.6.0/maven-core-3.6.0.jar</compilerArg>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>java.xml/com.sun.xml.internal.bind.v2.ContextFactory=ALL-UNNAMED</compilerArg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.5.2</version>
+				<version>3.6.0</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
